--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,15 +28,6 @@ li {
   line-height: 2.2;
 }
 
-.sign-out{
-  cursor: pointer;
-}
-
-.sign-out:hover{
-  transform: scale(0.98);
-  opacity: 0.75;
-}
-
 h1,
 h2,
 h3 {
@@ -120,8 +111,10 @@ h3 {
 
 .form,
 .content {
-  width: 70%;
+  width: 50%;
+  align-items: center;
   margin: 0 auto;
+  text-align: center;
 }
 
 .form-group {
