--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,13 +35,13 @@ h3 {
   margin-bottom: 10px;
 }
 
-.container {
+/* .container {
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
   text-align: center;
-}
+} */
 
 .header {
   display: flex;
@@ -49,7 +49,7 @@ h3 {
   align-items: center;
   padding: 20px 0;
   border-bottom: 1px solid #e6e6e6;
-  margin-bottom: 60px;
+  /* margin-bottom: 20px; */
 }
 
 .header ul {
@@ -87,30 +87,7 @@ h3 {
   color: #828282;
 }
 
-.goals {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-}
-
-.goal {
-  background-color: #f4f4f4;
-  margin: 10px 0;
-  padding: 20px 0 10px;
-  position: relative;
-}
-
-.goal .close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  cursor: pointer;
-  border: none;
-  background: none;
-}
-
-.form,
-.content {
+.form {
   width: 50%;
   align-items: center;
   margin: 0 auto;
@@ -172,7 +149,7 @@ h3 {
   transform: scale(0.98);
 }
 
-.loadingSpinnerContainer {
+/* .loadingSpinnerContainer {
   position: fixed;
   top: 0;
   right: 0;
@@ -192,8 +169,8 @@ h3 {
   border-color: #000 transparent #555 transparent;
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
-}
-
+} */
+/* 
 @keyframes spin {
   0% {
     transform: rotate(0deg);
@@ -201,6 +178,46 @@ h3 {
   100% {
     transform: rotate(360deg);
   }
+} */
+
+.dashboard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* background-color: aqua; */
+}
+
+.goals-container {
+  width: 50%;
+  /* background-color: cadetblue; */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  padding: 10px;
+}
+
+.goal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #f4f4f4;
+  margin: 10px 0;
+  padding: 20px 0 10px;
+  position: relative;
+  border-radius: 1vh;
+}
+
+.goal-icons {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.goal-icons *{
+  zoom: 150%;
+  cursor: pointer;
 }
 
 @media (max-width: 600px) {
