--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -77,9 +77,9 @@ h3 {
 
 .heading {
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   padding: 0 20px;
 }
 
@@ -88,7 +88,7 @@ h3 {
 }
 
 .form {
-  width: 50%;
+  width: 40%;
   align-items: center;
   margin: 0 auto;
   text-align: center;
@@ -185,12 +185,10 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* background-color: aqua; */
 }
 
 .goals-container {
   width: 50%;
-  /* background-color: cadetblue; */
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
@@ -201,23 +199,48 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   background-color: #f4f4f4;
   margin: 10px 0;
   padding: 20px 0 10px;
   position: relative;
   border-radius: 1vh;
+  border-style: solid;
+  border-width: 1%;
+  border-color:#828282;
+  height: 100%;
+}
+
+
+.goal >h2{
+  color:#333;
+  font-size: 24px;
+}
+
+.goal >p{
+  color: #828282;
+  font-size: 18px;
 }
 
 .goal-icons {
-  width: 100%;
+  width: 75%;
   display: flex;
   justify-content: space-around;
+  bottom: 5%;
+  position: absolute;
 }
 
 .goal-icons *{
   zoom: 150%;
   cursor: pointer;
+}
+
+.goal-icons >.update{
+  color:lightseagreen;
+}
+
+.goal-icons >.delete{
+  color:crimson;
 }
 
 @media (max-width: 600px) {
@@ -232,4 +255,13 @@ h3 {
   .heading p {
     font-size: 1.5rem;
   }
+
+  .goals-container {
+    width: 75%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 10px;
+    padding: 10px;
+  }
+  
 }
